Fixed Text Alignment
Testing CSS carrythrough

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -115,8 +115,8 @@ h3 {
 .projectC {
   padding: 30px;
   margin: 10px;
-  grid-area: right;
-  
+  grid-area: center;
+  text-align: center;
   background-color: #617073 ;
   outline: 10px solid #F7F7FF;
 }
